# DumprX

./: .gitignore  MANIFEST.in  MIGRATION.md  MIGRATION_SUMMARY.md  PACKAGE_STRUCTURE.md  README.md  README_v2.md  __init__.py  cli.py  config.yaml  dumper.sh  dumprx.py  dumprx.yaml.example  dumprx_main.py  pyproject.toml  requirements.txt  setup.py  setup.sh  setup_dumprx.py  setup_new.sh  validate-workflow.sh  validate_workflow.py
.github/: copilot-instructions.md
.github/workflows/: firmware-dump.yml
core/: __init__.py  config.py  device.py  dumper.py  processor.py  setup.py  test.py
downloaders/: __init__.py  afh.py  androidfilehost.py  base.py  direct.py  gdrive.py  generic.py  manager.py  mediafire.py  mega.py  wetransfer.py
dumprx/: __init__.py  __main__.py  banner.py  boot_unpacker.py  cli.py  downloader.py  external_tools.py  firmware_detector.py  firmware_extractor.py  utils.py
dumprx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
dumprx/cli/: main.py
dumprx/core/: __init__.py  config.py  device.py  device_info.py  dumper.py  extractor.py  firmware_processor.py  logger.py  main.py  setup.py  test.py  testing.py  tools.py
dumprx/device/: __init__.py  detector.py
dumprx/downloaders/: __init__.py  afh.py  afh_downloader.py  androidfilehost.py  base.py  direct.py  downloader_manager.py  gdrive.py  manager.py  mediafire.py  mega.py
dumprx/extractors/: __init__.py  android.py  archive.py  base.py  boot_unpacker.py  extractor_manager.py  firmware.py  firmware_extractors.py  lg_kdz.py  manager.py  sdat2img.py  update_app_extractor.py  vendor.py
dumprx/integrations/: telegram.py
dumprx/modules/: __init__.py  banner.py  device_detector.py  formatter.py  formatters.py  git_manager.py  validator.py  validators.py
dumprx/tools/: kdztools.py  sdat2img.py  splituapp.py
dumprx/utils/: __init__.py  banner.py  boot.py  boot_unpacker.py  console.py  detection.py  device_info.py  downloaders.py  downloads.py  external_tools.py  file_handler.py  file_utils.py  files.py  git.py  git_manager.py  logging.py  notifications.py  telegram.py  (+1 more)
extractors/: __init__.py  android.py  archive.py  base.py  kdz.py  lg_kdz.py  manager.py  ofp.py  ops.py  ozip.py  pac.py  payload.py  sdat.py  super.py  update_app.py
lib/: boot_extractor.py  config.py  downloader.py  extractors.py  git_manager.py  progress.py  ui.py
modules/: __init__.py  banner.py  device.py  file_utils.py  formatter.py  git.py  unpack_boot.py
utils/: __init__.py  console.py  file_handler.py  git.py  unpackboot.py  unpackboot.sh
(+4 files in other folders)
