[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dumprx"
version = "2.0.0"
description = "Modern firmware extraction and dumping toolkit"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "requests>=2.25.0",
    "py7zr>=0.20.0",
    "patool>=1.12.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
    "gitpython>=3.1.0",
    "zstandard>=0.20.0"
]

[project.scripts]
dumprx = "dumprx.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dumprx*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true